re-did confirm to use csrf, working now with improved dashboard, still cannot yet send whatsApp messages

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -110,3 +110,15 @@ body {
 .navbar-toggler {
   border: none;
 }
+
+.table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+.table th, .table td {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
