--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h1>Welcome to the Dashboard</h1>
+  <h1>Welcome to your Dashboard</h1>
 
 
   <form id="optInForm">
@@ -53,7 +53,7 @@
   </script>
 
    <h2>Events</h2>
-  <table class="table">
+  <table class="table table-bordered">
     <thead>
       <tr>
         <th>Date</th>
