--- a/templates/base.html
+++ b/templates/base.html
@@ -5,12 +5,12 @@
     <script src="{{ url_for('static', filename='js/custom.js') }}"></script>
     <script src="{{ url_for('static', filename='js/libphonenumber.js') }}"></script>
 
-    <title>FujiNet Alerting System Registration</title>
+    <title>FujiNet Alerting Systemn</title>
   </head>
   <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark">
-  <a class="navbar-brand" href="#">FujiNet Game System Alerting</a>
+  <a class="navbar-brand" href="#">FujiNet Game Alerting</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -22,6 +22,14 @@
       <li class="nav-item">
         <a class="nav-link" href="{{ url_for('dashboard') }}">Dashboard</a>
       </li>
+        <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('index') }}">Enter your number to register, confirm with the code. Then enter number again here to login and opt-in to receive messages.</a>
+      </li>
+     <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('dashboard') }}">WhatsApp is NOT currently working</a>
+      </li>
+
+
     </ul>
   </div>
 </nav>
